--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 },
     "autoload": {
         "psr-4": {
-            "OCA\\MemoriesAlerts\\": "lib/"
+            "OCA\\Memories_alerts\\": "lib/"
         }
     }
 }
